Adding result aggregator.
Signed-off-by: Luis H. P. Mendes <luishpmendes@gmail.com>

--- a/ra117801/codigo/Makefile
+++ b/ra117801/codigo/Makefile
@@ -5,11 +5,14 @@ CFLAGS=-Wall -Werror -g -O0 -fno-inline -std=c++11
 	$(CPPC) -c -o $@ $< $(CFLAGS)
 
 clean:
-	rm -rf *.o relaxlag resultValidator
+	rm -rf *.o relaxlag resultValidator resultAggregator
 
 relaxlag: relaxlag.o
 	$(CPPC) -o $@ $^ $(CFLAGS)
 
 resultValidator: resultValidator.o
+	$(CPPC) -o $@ $^ $(CFLAGS)
+
+resultAggregator: resultAggregator.o
 	$(CPPC) -o $@ $^ $(CFLAGS)
 
