Optimizing compile flags.
Signed-off-by: Luis H. P. Mendes <luishpmendes@gmail.com>

--- a/ra117801/codigo/Makefile
+++ b/ra117801/codigo/Makefile
@@ -1,5 +1,5 @@
 CPPC=g++
-CFLAGS=-Wall -Werror -g -O0 -fno-inline -std=c++11
+CFLAGS=-Wall -Werror -O3 -fno-inline -std=c++11
 
 %.o: %.cpp
 	$(CPPC) -c -o $@ $< $(CFLAGS)
