Adding output aggregator.
Signed-off-by: Luis H. P. Mendes <luishpmendes@gmail.com>

--- a/ra117801/codigo/Makefile
+++ b/ra117801/codigo/Makefile
@@ -5,7 +5,7 @@ CFLAGS=-Wall -Werror -O3 -fno-inline -std=c++11
 	$(CPPC) -c -o $@ $< $(CFLAGS)
 
 clean:
-	rm -rf *.o relaxlag resultValidator resultAggregator
+	rm -rf *.o relaxlag resultValidator resultAggregator outputAggregator
 
 relaxlag: relaxlag.o
 	$(CPPC) -o $@ $^ $(CFLAGS)
@@ -14,5 +14,8 @@ resultValidator: resultValidator.o
 	$(CPPC) -o $@ $^ $(CFLAGS)
 
 resultAggregator: resultAggregator.o
+	$(CPPC) -o $@ $^ $(CFLAGS)
+
+outputAggregator: outputAggregator.o
 	$(CPPC) -o $@ $^ $(CFLAGS)
 
